more on calculus

--- a/notes/08-Calculus/calculus.html
+++ b/notes/08-Calculus/calculus.html
@@ -472,6 +472,7 @@ e_{i} = (0,0,\ldots,0,1,0,\ldots, 0)
 <li>The gradient points in the direction where <span class="math inline">\(f\)</span> increases most rapidly.</li>
 <li><span class="math inline">\(-\nabla f\)</span> points in the direction where <span class="math inline">\(f\)</span> decreases most rapidly.</li>
 <li>The gradient is perpendicular to the contour lines of the function.</li>
+<li>The gradient is zero at local minima and maxima of a function (but possibly also at other places)</li>
 </ol>
 <p>These facts follow from the chain rule and properties of the dot product.</p>
 <p>First of all, <span class="math display">\[
@@ -489,6 +490,7 @@ D_{v}(f)(\mathbf{x}) = \frac{\partial f}{\partial x_1}v_1+\frac{\partial f}{\par
 (\nabla f)(\mathbf{x})\cdot \mathbf{v} = \|(\nabla f)(\mathbf{x})\|\|v\|\cos(\theta)
 \]</span></p>
 <p>where <span class="math inline">\(\theta\)</span> is the angle between the gradient and the vector <span class="math inline">\(v\)</span>. This is maximum when <span class="math inline">\(\theta=0\)</span>, and minimum when <span class="math inline">\(\theta=\pi\)</span>.</p>
+<p>To see the significance of this, check out <a href="./GDanimate_js.html">this page.</a>.</p>
 </section>
 <section id="functions-from-mathbfrm-to-mathbfrn-and-their-derivatives" class="level2">
 <h2 class="anchored" data-anchor-id="functions-from-mathbfrm-to-mathbfrn-and-their-derivatives">Functions from <span class="math inline">\(\mathbf{R}^{m}\)</span> to <span class="math inline">\(\mathbf{R}^{n}\)</span> and their derivatives</h2>
